fix "to top" z-index

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,7 +4,8 @@
 
 .to-top {
   position: fixed;
-  z-index: 10000001;
+  /*z-index: 10000001;*/
+  z-index: 1034;
   width: 60px;
   height: 60px;
   right: 25px;
